--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" href="icon_path" type="image/icon type">
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,600" rel="stylesheet" type="text/css">
     <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
     <link type="text/css" rel="stylesheet" href="style.css">
-    <link rel="icon" href="./icon.png">
-    <title>Pig Game</title>
+    <link rel="icon" href="icon_path" type="image/icon type">
+    <title>Pig Game
+    <link rel="icon" href="icon_path" type="image/icon type">
+    </title>
+    <link rel="icon" href="icon_path" type="image/icon type">
 </head>
 
 <body>
