--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
     <link type="text/css" rel="stylesheet" href="style.css">
     <link rel="icon" href="icon_path" type="image/icon type">
-    <title>Pig Game
-    <link rel="icon" href="icon_path" type="image/icon type">
-    </title>
+    <title>Kapalin - Pig Game</title>
     <link rel="icon" href="icon_path" type="image/icon type">
 </head>
 
